maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:36: error: not found: value mhasTopWall
  if(mhasTopWall(currentCoords)) {
     ^